--- a/ClassicModelWeb/pom.xml
+++ b/ClassicModelWeb/pom.xml
@@ -69,6 +69,12 @@
             <version>1.18.22</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>at.favre.lib</groupId>
+            <artifactId>bcrypt</artifactId>
+            <version>0.9.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
