--- a/spring-exercise/pom.xml
+++ b/spring-exercise/pom.xml
@@ -37,6 +37,12 @@
             <version>1.18.22</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.25</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
