--- a/classicmodels-service/src/main/resources/application.properties
+++ b/classicmodels-service/src/main/resources/application.properties
@@ -4,3 +4,13 @@ spring.datasource.password=MySQL_63130500042
 spring.datasource.url=jdbc:mysql://localhost:3306/classicmodels
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.spring.servlet.multipart.file-size-threshold=4KB
+# Max file size.
+spring.servlet.multipart.max-file-size=10MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=80MB
+## File Storage Properties# All files uploaded through the REST API will be stored in this directory
+file.upload-dir=/public/classicmodels/uploads/
