--- a/final-practice/pom.xml
+++ b/final-practice/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.4</version>
+        <version>2.6.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>sit.int204</groupId>
-    <artifactId>classicmodels-service</artifactId>
+    <artifactId>final-practice</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>classicmodels-service</name>
-    <description>classicmodels-service</description>
+    <name>final-practice</name>
+    <description>final-practice</description>
     <properties>
         <java.version>11</java.version>
     </properties>
@@ -20,23 +20,19 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>2.6.5</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
-            <version>2.6.5</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.6.5</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <version>2.6.5</version>
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
@@ -53,7 +49,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>2.6.5</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -65,7 +60,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <version>2.6.5</version>
-            <optional>true</optional>
         </dependency>
     </dependencies>
 
