--- a/oasip-test/src/main/resources/application.properties
+++ b/oasip-test/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=MySQL_63130500042
-spring.datasource.url=jdbc:mysql://localhost:3306/oasip
+spring.datasource.password=oasip-kp-3
+spring.datasource.url=jdbc:mysql://10.4.84.42:3306/OASIP
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
